<resources>
    <string name="app_name">RobotKit SampleApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="bye_world">Bye world!</string>
    <string name="hello_human">hello human what do you want to do?</string>
    <string name="hello">hello</string>
    <string name="hi">hi</string>
    <string name="bye">bye</string>
    <string name="see_you">see you</string>
    <string name="i_dont_understand">I don\'t understand!</string>
    <string name="i_stop">Sure I stop!</string>
    <string name="info">Info</string>
    <string name="discuss">discuss</string>
    <string name="talk">talk</string>
    <string name="start">start</string>
    <string name="stop">stop</string>
    <string name="connect">connect</string>
    <string name="disconnect">disconnect</string>
    <string name="action_settings">Settings</string>
    <string name="none">NONE</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="lets_talk">sure, let\'s talk!</string>
    <string name="restore_discussion">Where were we? Ah … Yes! I was saying!</string>
    <string name="lorem_lpsum">Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l\'imprimerie depuis les années 1500, quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n\'a pas fait que survivre cinq siècles, mais s\'est aussi adapté à la bureautique informatique, sans que son contenu n\'en soit modifié. Il a été popularisé dans les années 1960 grâce à la vente de feuilles Letraset contenant des passages du Lorem Ipsum, et, plus récemment, par son inclusion dans des applications de mise en page de texte, comme Aldus PageMaker.</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="ip_address">IP Address</string>
    <string name="title_activity_basic_hello_world">BasicHelloWorldActivity</string>
    <string name="kotlin_test">Kotlin Stress Test</string>
    <string name="java_test">Java Stress Test</string>
</resources>
