<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            app:srcCompat="@drawable/start"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="23dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"/>

    <Button
            android:text="Clear data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/clearDataBtn"
            android:layout_marginTop="48dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="15dp"
            android:layout_below="@+id/radioGroup"
            android:layout_alignEnd="@+id/gotoBookmarkBtn"/>

    <Button
            android:text="Go to bookmark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:id="@+id/gotoBookmarkBtn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_below="@+id/textview"
            android:layout_toEndOf="@+id/textview"
            android:layout_marginTop="50dp"/>


    <TextView
            android:text="@string/none"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/textview"/>

    <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal"
            android:id="@+id/radioGroup">

        <RadioButton
                android:id="@+id/radio_french"
                android:layout_weight="1"
                android:background="@drawable/french_flag"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:text="@string/french"/>

        <RadioButton
                android:id="@+id/radio_english"
                android:layout_weight="1"
                android:textColor="@android:color/white"
                android:background="@drawable/english_flag"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:text="@string/english"/>

    </RadioGroup>

</RelativeLayout>

